--- a/R_Experiment2_writeup.ipynb
+++ b/R_Experiment2_writeup.ipynb
@@ -87,7 +87,7 @@
       },
       "source": [
         "#Now, create a variable called logic_vect that gets the result of num_vect <= 0.55, which is read as 'num_vect is less than 0.55'.\n",
-        "logic_vect <- num_vect <= 0.55"
+        "logic_vect <- num_vect <=0.55"
       ],
       "execution_count": null,
       "outputs": []
@@ -113,12 +113,32 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "uuZ8dxelH_lD"
+        "id": "B-qA0ir1TNBN"
       },
       "source": [
-        "TRUE TRUE FALSE FALSE"
+        "logic_vect"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4jiw8bwAUVoW"
+      },
+      "source": [
+        "Output: TRUE TRUE FALSE FALSE"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "50EXDJ8DTLz2"
+      },
+      "source": [
+        ""
       ]
     },
     {
@@ -133,12 +153,24 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "6mU1TVkwIalL"
+        "id": "d0gG1063TTcn"
       },
       "source": [
-        "FALSE FALSE TRUE TRUE "
+        "logic_vect <- num_vect >= 6\r\n",
+        "logic_vect"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BGRzPMyVVEMi"
+      },
+      "source": [
+        "Output: FALSE FALSE TRUE TRUE "
       ]
     },
     {
@@ -168,17 +200,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eAWlu4kSJVEV"
-      },
-      "source": [
-        "char_vect <- c(\"My\", \"name\", \"is\")"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "fCs9xH65dXqF"
       },
       "source": [
@@ -186,26 +207,6 @@
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "DCdlk62JJgyb"
-      },
-      "source": [
-        "char_vect"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "iHubUd0pJisv"
-      },
-      "source": [
-        "\"My\"  \"name\" \"is\""
-      ]
     },
     {
       "cell_type": "code",
@@ -221,22 +222,17 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "QNq2UZNyKB7j"
-      },
-      "source": [
-        "\"My name is\""
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "U6zErBTNdkjS"
       },
       "source": [
         "Explain What difference you see in above two code blocks\n",
         "\n",
-        " In the first block, char_vect is a character vector with length 3. \n",
-        " In the second block, elements of the char_vect are joined together in one continuous character string using paste() function. now in the second box char_vect is a character vector with length 1."
+        " My explaination\n",
+        " ss\n",
+        " \n",
+        " fsdfsd\n",
+        " fsfd\n",
+        " fsdf"
       ]
     },
     {
@@ -249,36 +245,6 @@
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "oxzoP1wNQCpf"
-      },
-      "source": [
-        "to add my name in char_vect, I will create a new vector name as my_name and store the result in my_name."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "GeSOjataQPOE"
-      },
-      "source": [
-        "my_name <- c(char_vect, \"Nikita\")\r\n",
-        "paste(my_name, collapse = \" \")"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "T7Ow7Fu6Qi52"
-      },
-      "source": [
-        "Output: \"My name is Nikita\""
-      ]
     },
     {
       "cell_type": "code",
@@ -302,16 +268,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "hHnopewPQvoM"
-      },
-      "source": [
-        "Output: \"Hello World!\".\r\n",
-        "Explaination: collapse argument with function paste explains that we can join elements of the chaarctor vector seperated by single spaces."
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "UG8NGPx4fq01"
@@ -326,29 +282,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "7AKyNC3xUEPS"
-      },
-      "source": [
-        "Output: \"1:X\" \"2:Y\" \"3:Z\" "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "WZburobtgHPL"
       },
       "source": [
         "Explain output of above code block"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "DCI--JL2RVar"
-      },
-      "source": [
-        "\r\n",
-        "Explaination: here In this example, sep argument is used to seperate the joined elements with a single space. here, we join the two vectors each of length 3 and try to paste with sep argument."
       ]
     },
     {
@@ -366,31 +303,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "7eeWmT5CS67a"
-      },
-      "source": [
-        "Output: [1] \"A-1\"  \"B-2\"  \"C-3\"  \"D-4\"  \"E-5\"  \"F-6\"  \"G-7\" \r\n",
-        " [8] \"H-8\"  \"I-9\"  \"J-10\" \"K-1\"  \"L-2\"  \"M-3\"  \"N-4\" \r\n",
-        "[15] \"O-5\"  \"P-6\"  \"Q-7\"  \"R-8\"  \"S-9\"  \"T-10\" \"U-1\" \r\n",
-        "[22] \"V-2\"  \"W-3\"  \"X-4\"  \"Y-5\"  \"Z-6\" ,\r\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "zi6nXmiZp1Li"
       },
       "source": [
         "Explain output of above code block"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "SUm9Ub4rT8s_"
-      },
-      "source": [
-        "Explaination: here, charactor vector LETTERS is longer than numeric vector 1:10. so R simply repeats the 1:10 until it matches length of the charactor vector. "
       ]
     },
     {
