--- a/R_Experiment1_writeup.ipynb
+++ b/R_Experiment1_writeup.ipynb
@@ -1704,7 +1704,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "26u_XQzBd55S"
+        "id": "cNA89MNVf2AL"
       },
       "source": [
         "# Copy it to my_file1.txt\r\n",
@@ -1716,7 +1716,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "gyk-sy4FeH_k"
+        "id": "YLxdIl-8f341"
       },
       "source": [
         "TRUE"
@@ -1725,7 +1725,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "o4td0SKIeMb3"
+        "id": "qnYuRBcqf5JD"
       },
       "source": [
         "# List files and folders in PWD and also in '/contents' directory \r\n",
@@ -1733,6 +1733,115 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1GIx0Z3Lf8dS"
+      },
+      "source": [
+        "'my_file1.txt'\r\n",
+        "'myfile.txt'"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BDBeul3JgE9p"
+      },
+      "source": [
+        "# files and folder in '/content'\r\n",
+        "setwd('/content')\r\n",
+        "list.dirs()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-ENIztc2gI6K"
+      },
+      "source": [
+        "'.'\r\n",
+        "'./.config'\r\n",
+        "'./.config/configurations'\r\n",
+        "'./.config/logs'\r\n",
+        "'./.config/logs/2021.03.07'\r\n",
+        "'./.ipynb_checkpoints'\r\n",
+        "'./myworkplace'\r\n",
+        "'./myworkplace/exp1'\r\n",
+        "'./myworkplace/exp2'\r\n",
+        "'./sample_data'"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Q-d00Kqbg0Dw"
+      },
+      "source": [
+        "# Display only File access permisssion in the output for every file in exp1 folder. \r\n",
+        "setwd('./myworkplace/exp1')\r\n",
+        "# test for existence.\r\n",
+        "file.access(list.files(), 0)\r\n",
+        "# test for execute permission.\r\n",
+        "file.access(list.files(), 1)\r\n",
+        "# test for write permission.\r\n",
+        "file.access(list.files(), 2)\r\n",
+        "# test for read permission.\r\n",
+        "file.access(list.files(), 3)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KWLuD5Hyg3Tr"
+      },
+      "source": [
+        "**my_file1.txt**\r\n",
+        "0\r\n",
+        "**myfile.txt**\r\n",
+        "0"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qX34xnrEhAG0"
+      },
+      "source": [
+        "**my_file1.txt**\r\n",
+        "-1\r\n",
+        "**myfile.txt**\r\n",
+        "-1"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "b9MQj7uzhLkY"
+      },
+      "source": [
+        "**my_file1.txt**\r\n",
+        "0\r\n",
+        "**myfile.txt**\r\n",
+        "0"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9Ei2Zj3yhWHJ"
+      },
+      "source": [
+        "**my_file1.txt**\r\n",
+        "-1\r\n",
+        "**myfile.txt**\r\n",
+        "-1"
+      ]
     }
   ]
 }
