--- a/R_Experiment4_writeup.ipynb
+++ b/R_Experiment4_writeup.ipynb
@@ -73,9 +73,14 @@
         "# Sum the values of each column with apply()\n",
         "X_colsum <- apply(X,2,sum)\n",
         "X_colsum\n",
-        "# Sum the values of each row with apply()\n",
-        "X_rowsum <- apply(X,1,sum)\n",
-        "X_rowsum"
+        "\n",
+        "2.2112490433315\n",
+        "2.00472372914817\n",
+        "3.24149786050889\n",
+        "-0.275639058176333\n",
+        "-2.76970434460937\n",
+        "3.68452248215729\n",
+        "\n"
       ],
       "execution_count": null,
       "outputs": [
@@ -110,6 +115,34 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6xJGJtZILa-H"
+      },
+      "source": [
+        "# Sum the values of each row with apply()\n",
+        "X_rowsum <- apply(X,1,sum)\n",
+        "X_rowsum"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MgsJKtECLh-T"
+      },
+      "source": [
+        "1.11537789230419\n",
+        "4.28316639525965\n",
+        "1.34473388547648\n",
+        "3.57512425196637\n",
+        "-2.22175271264654"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -155,25 +188,94 @@
       },
       "source": [
         "# Using sequence 1:9 create a matrix A with size 3*3\n",
-        "matrix_A <- matrix(c(1:9), nrow=3, ncol=3)\n",
-        "matrix_A\n",
+        "A <- matrix(1:9, nrow=3, ncol=3)\n",
+        "A\n",
+        "      [,1] [,2] [,3]\n",
+        "[1,]    1    4    7\n",
+        "[2,]    2    5    8\n",
+        "[3,]    3    6    9\n",
+        "\n",
         "#Using sequence 4:15 create a matrix B with size 4*3\n",
-        "matrix_B <- matrix(c(4:15), nrow=4, ncol=3)\n",
-        "matrix_B\n",
+        "B <- matrix(4:15, nrow=4, ncol=3)\n",
+        "B\n",
+        "\n",
+        "     [,1] [,2] [,3]\n",
+        "[1,]    4    8   12\n",
+        "[2,]    5    9   13\n",
+        "[3,]    6   10   14\n",
+        "[4,]    7   11   15\n",
         "#Using sequnce 8:10 create a matrix C with size 3*2\n",
-        "matrix_C <- matrix(c(8:10), nrow=3, ncol=2)\n",
-        "matrix_C\n",
+        "C <- matrix(8:10, nrow=3, ncol=2)\n",
+        "C\n",
+        "\n",
+        "    [,1] [,2]\n",
+        "[1,]    8    8\n",
+        "[2,]    9    9\n",
+        "[3,]   10   10\n",
         "# create variable MyList as list of matrix A, B, C\n",
-        "Mylist <- list(m,matrix_b,matrix_C)\n",
-        "Mylist\n",
+        "\n",
+        "MyList <- list(A, B, C)\n",
+        "MyList\n",
+        "\n",
+        "[[1]]\n",
+        "     [,1] [,2] [,3]\n",
+        "[1,]    1    4    7\n",
+        "[2,]    2    5    8\n",
+        "[3,]    3    6    9\n",
+        "\n",
+        "[[2]]\n",
+        "     [,1] [,2] [,3]\n",
+        "[1,]    4    8   12\n",
+        "[2,]    5    9   13\n",
+        "[3,]    6   10   14\n",
+        "[4,]    7   11   15\n",
+        "\n",
+        "[[3]]\n",
+        "     [,1] [,2]\n",
+        "[1,]    8    8\n",
+        "[2,]    9    9\n",
+        "[3,]   10   10\n",
         "\n",
         "# Using lapply and [ operator Extract the 2nd column from `MyList` with the selection operator `[` with `lapply()`\n",
+        "lapply(MyList, '[', , 2)\n",
+        "[[1]]\n",
+        "[1] 4 5 6\n",
         "\n",
+        "[[2]]\n",
+        "[1]  8  9 10 11\n",
+        "\n",
+        "[[3]]\n",
+        "[1]  8  9 10\n",
         "# Using lapply and [ operator Extract the 4th row from `MyList` with the selection operator `[` with `lapply()`\n",
+        "lapply(MyList, '[', 4, )\n",
+        "# Error Occurs because in MyList there are 3 matrix where matrix A and C is having only 3 rows\n",
         "\n",
+        "Error in FUN(X[[i]], ...): subscript out of bounds\n",
+        "Traceback:\n",
+        "\n",
+        "1. lapply(MyList, \"[\", 4, )\n",
         "\n",
         "# Using lapply and [ operator Extract the 1st row from `MyList` with the selection operator `[` with `lapply()`\n",
-        "\n"
+        "\n",
+        "lapply(MyList, '[', 1, )"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Hq3li8HrNcMY"
+      },
+      "source": [
+        "[[1]]\n",
+        "[1] 1 4 7\n",
+        "\n",
+        "[[2]]\n",
+        "[1]  4  8 12\n",
+        "\n",
+        "[[3]]\n",
+        "[1] 8 8"
       ],
       "execution_count": null,
       "outputs": []
@@ -202,15 +304,26 @@
       "source": [
         "# Return a list with `lapply()`\n",
         "lapply(MyList,\"[\", 2, 1 )\n",
+        "2\n",
+        "5\n",
+        "9\n",
         "\n",
         "# Return a vector with `sapply()`\n",
         "sapply(MyList,\"[\", 2, 1 )\n",
         "\n",
+        "2\n",
+        "5\n",
+        "9\n",
         "# Return a list with `sapply()`\n",
         "sapply(MyList,\"[\", 2, 1, simplify=F)\n",
-        "\n",
+        "2\n",
+        "5\n",
+        "9\n",
         "# Return a vector with `unlist()`\n",
-        "unlist(lapply(MyList,\"[\", 2, 1 ))"
+        "unlist(lapply(MyList,\"[\", 2, 1 ))\n",
+        "2\n",
+        "5\n",
+        "9"
       ],
       "execution_count": null,
       "outputs": []
@@ -233,6 +346,170 @@
       },
       "source": [
         "# Example use of mapply function"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "daDXBS4uO2Fq"
+      },
+      "source": [
+        "**Example** **1**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rKjkfoD8N1v1"
+      },
+      "source": [
+        "In this example, 1:9 is specifying the value to repeat, and 9:1 is specifying how many times to repeat. This order is based on the order of arguments in the rep function itself."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Qykt5nHJN2nw"
+      },
+      "source": [
+        "mapply(rep, 1:9, 9:1)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bvN-Q9MpOHou"
+      },
+      "source": [
+        "[[1]]\n",
+        "[1] 1 1 1 1 1 1 1 1 1\n",
+        "\n",
+        "[[2]]\n",
+        "[1] 2 2 2 2 2 2 2 2\n",
+        "\n",
+        "[[3]]\n",
+        "[1] 3 3 3 3 3 3 3\n",
+        "\n",
+        "[[4]]\n",
+        "[1] 4 4 4 4 4 4\n",
+        "\n",
+        "[[5]]\n",
+        "[1] 5 5 5 5 5\n",
+        "\n",
+        "[[6]]\n",
+        "[1] 6 6 6 6\n",
+        "\n",
+        "[[7]]\n",
+        "[1] 7 7 7\n",
+        "\n",
+        "[[8]]\n",
+        "[1] 8 8\n",
+        "\n",
+        "[[9]]\n",
+        "[1] 9"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3vIDhyG1ONZC"
+      },
+      "source": [
+        "**Example** **2**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9jxvS6aWOQrd"
+      },
+      "source": [
+        "Another use for mapply would be to create a new variable. For example, using dataset t, I could divide one column by another column to create a new value. This would be useful for creating a ratio of two variables as shown in the example below."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7sXNMb-zOWgk"
+      },
+      "source": [
+        "my.matrx <- matrix(c(1:10, 11:20, 21:30), nrow = 10, ncol = 3)\n",
+        "tdata <- as.data.frame(cbind(c(1,1,1,1,1,2,2,2,2,2), my.matrx))\n",
+        "\n",
+        "tdata$V5<- mapply(function(x, y) x/y, tdata$V2, tdata$V4)\n",
+        "tdata$V5"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PsPqoIhrOd1j"
+      },
+      "source": [
+        "[1] 0.04761905 0.09090909 0.13043478 0.16666667\n",
+        "[5] 0.20000000 0.23076923 0.25925926 0.28571429\n",
+        "[9] 0.31034483 0.33333333\n",
+        "> "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IkrtIEo0OgxB"
+      },
+      "source": [
+        "**Example** **3**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Nl3DK8TpOjk4"
+      },
+      "source": [
+        "When using an apply family function to create a new variable, one option is to create a new vector ahead of time with the size of the vector pre-allocated. I created a numeric vector of length 10 using the vector function. The arguments for the vector function are vector(mode, length). Inside mapply I created a function to multiple two variables together. The results of the mapply function are then saved into the vector."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jc7INjxXOnfg"
+      },
+      "source": [
+        "new.vec <- vector(mode = \"numeric\", length = 10)\n",
+        "new.vec <- mapply(function(x, y) x*y, tdata$V3, tdata$V4)\n",
+        "new.vec"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RL1dpdSCOslj"
+      },
+      "source": [
+        "231 \n",
+        "264\n",
+        "299\n",
+        "336 \n",
+        "375\n",
+        "416 \n",
+        "459 \n",
+        "504 \n",
+        "551 \n",
+        "600\n",
+        "> "
       ],
       "execution_count": null,
       "outputs": []
